change chapter split method
use 'code.google.com/p/go.net/html' to split chapters
TOC level can now be different to split level
add support for DuoKan full screen image
add option to toggle DuoKan externsion (not completed)

--- a/example/book/book.html
+++ b/example/book/book.html
@@ -1,15 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" >
-	<head>
-		<title>Unknown</title>
-		<meta content="http://www.w3.org/1999/xhtml; charset=utf-8" http-equiv="Content-Type"/>
-		<link href="style.css" type="text/css" rel="stylesheet"/>
-		<style type="text/css">@page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }</style>
-	</head>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta charset="utf-8" />
+	<title>维摩诘的花雨满天</title>
+	<link href="style.css" type="text/css" rel="stylesheet"/>
+</head>
 <body>
+<img src="fullscreen.jpg" alt="fullscreen" class="duokan-fullscreen"/>
 <h1>出版说明</h1>
 <p>这本书的出版，有一个颇为偶然的因缘，在此特向读者说一说背后的有趣过程。</p>
+<img src="fullscreen.jpg" alt="fullscreen" class="duokan-fullscreen"/>
 <p>缘南师怀瑾先生所讲解的《维摩诘经》，是于一九八一年七月十日，在台北十方书院开始的。由于书院的学生以出家众及学佛者为主，所以南师的讲解偏重在修持方面，举例引证也以修持为重点，与一般讲解佛经不尽相同。</p>
+<img src="fullscreen.jpg" alt="fullscreen" class="duokan-fullscreen"/>
 <p>二十年来，曾几次有人贡献心力，希望将记录整理，以便印行出版；但是阴错阳差，始终未能完成，而关心的读者们，却时时殷切询问。</p>
 <p>因缘常常十分奇妙，大约两年多前，香港佛教图书馆的亲证尼法师，把南师所讲《维摩诘经》的录音带，交了两卷给一位李华女士，拜托她的夫婿石宏先生，抽空把录音记录成文字。这位石宏先生，出身台湾大学法律系，又在美国密西根大学取得比较法学及企管两个硕士学位，他看到只有两卷录音带时，就欣然答应了这件事。</p>
 <p>岂知，两卷完工后才知道，后面还有一百三十七卷之多，怎么办呢？他心里想，既然承诺在先，就继续做下去吧。此后，石宏先生每天花费七八个小时，努力工作了一年，终告完成。</p>
@@ -21,6 +23,11 @@
 <p>本书所采用经典，是佛教出版社版本，由古国治居士重新标点，书中小标题为编者所加。</p>
 <p style='text-align:right'>刘雨虹 记 二○○四年十二月</p>
 <h1>开场白</h1>
+<h2>测试标题h2-1</h2>
+<h3>测试标题h3-1</h3>
+<h2>测试标题h2-2</h2>
+<h1>测试标题h1-1</h1>
+<h2>测试标题h2-3</h2>
 <p>我们今天讲的《维摩诘经》，是与整个佛法、佛教、东方文化，尤其是中国的文化关系最大、影响最深、历史最久的一本经。</p>
 <p>如果把本经只当作是在家居士所说的一本经，这个观念就不对了！《维摩诘经》所代表的精神，是佛法在世间，不离世间本位而解脱成佛的法门，也指出了十方三世诸佛如何证道，如何得到解脱，如何证得菩提之路。</p>
 <p>一般人都以为中国的禅宗是达摩祖师来了之后才传开的，殊不知在达摩祖师以前，由鸠摩罗什法师所翻译的《维摩诘经》和《法华经》影响最大，而成为中国文化禅宗的根本经典。</p>
