updated example and several bugfix/enhancement
updated example
fix: config value cannot be readed if contains white space
do not generate link for level 0 chapter now
'<>"& in epub properties are now escaped
multi-line english config value is better handled

--- a/example/book/book.html
+++ b/example/book/book.html
@@ -2,92 +2,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="utf-8" />
-	<title>维摩诘的花雨满天</title>
+	<title>示例(Example)</title>
 	<link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<img src="fullscreen.jpg" alt="fullscreen" class="duokan-fullscreen"/>
-<h1>出版说明</h1>
-<p>这本书的出版，有一个颇为偶然的因缘，在此特向读者说一说背后的有趣过程。</p>
-<img src="fullscreen.jpg" alt="fullscreen" class="duokan-fullscreen"/>
-<p>缘南师怀瑾先生所讲解的《维摩诘经》，是于一九八一年七月十日，在台北十方书院开始的。由于书院的学生以出家众及学佛者为主，所以南师的讲解偏重在修持方面，举例引证也以修持为重点，与一般讲解佛经不尽相同。</p>
-<img src="fullscreen.jpg" alt="fullscreen" class="duokan-fullscreen"/>
-<p>二十年来，曾几次有人贡献心力，希望将记录整理，以便印行出版；但是阴错阳差，始终未能完成，而关心的读者们，却时时殷切询问。</p>
-<p>因缘常常十分奇妙，大约两年多前，香港佛教图书馆的亲证尼法师，把南师所讲《维摩诘经》的录音带，交了两卷给一位李华女士，拜托她的夫婿石宏先生，抽空把录音记录成文字。这位石宏先生，出身台湾大学法律系，又在美国密西根大学取得比较法学及企管两个硕士学位，他看到只有两卷录音带时，就欣然答应了这件事。</p>
-<p>岂知，两卷完工后才知道，后面还有一百三十七卷之多，怎么办呢？他心里想，既然承诺在先，就继续做下去吧。此后，石宏先生每天花费七八个小时，努力工作了一年，终告完成。</p>
-<p>除了记录文字外，石先生还作了初步的整理工作，以及资料的校对等等，现在趁此出版之际，对石宏先生的热心与辛劳，特别致上深切的感谢之忱。</p>
-<p>有人说，读懂了一些《维摩诘经》，心量不自觉的扩大了，不再局限在我们生活的这个婆婆世界，也不会局限于向往的净土世界，而扩展到了无限的空间。也有人说，这本经典包含了一切，当你学佛不知道该怎么做时，本经有答案给你；当你事理不明白时，本经也有答案给你。</p>
-<p>举例来说，学佛的人常常疑惑，为什么女儿身不能成佛，而要先转成男身才有可能？在这部经典中，对这个问题就有极超越的讨论与答案。所以，这是一本包括一切见地修行的经典，太伟大了。</p>
-<p>但是，对现代的人来说，原典经文似觉太过古老，现在这本南师的讲解记录，用的是简单明了的话语，相信对读者们了解时，一定容易很多。</p>
-<p>这本书虽未经南师亲自校阅，但是在出版的过程中，曾经过不少参加听讲者的校对，如宏忍尼法师、古国治、谢锦扬、欧阳哲等。有关经典校正的工作，宏忍尼法师投入时间精神最深久，在资料查核方面，杭纪东教授尽力最多，而书名则是周梦蝶居士的灵感，在此一并向他们致谢。</p>
-<p>本书所采用经典，是佛教出版社版本，由古国治居士重新标点，书中小标题为编者所加。</p>
-<p style='text-align:right'>刘雨虹 记 二○○四年十二月</p>
-<h1>开场白</h1>
-<h2>测试标题h2-1</h2>
-<h3>测试标题h3-1</h3>
-<h2>测试标题h2-2</h2>
-<h1>测试标题h1-1</h1>
-<h2>测试标题h2-3</h2>
-<p>我们今天讲的《维摩诘经》，是与整个佛法、佛教、东方文化，尤其是中国的文化关系最大、影响最深、历史最久的一本经。</p>
-<p>如果把本经只当作是在家居士所说的一本经，这个观念就不对了！《维摩诘经》所代表的精神，是佛法在世间，不离世间本位而解脱成佛的法门，也指出了十方三世诸佛如何证道，如何得到解脱，如何证得菩提之路。</p>
-<p>一般人都以为中国的禅宗是达摩祖师来了之后才传开的，殊不知在达摩祖师以前，由鸠摩罗什法师所翻译的《维摩诘经》和《法华经》影响最大，而成为中国文化禅宗的根本经典。</p>
-<h2>东方世界的两个佛国</h2>
-<p>这本经的份量有如此之重，但因为文字易懂，流畅优美，人们很轻易的读过去了，认为已经懂了，实际上非常难懂。我们这一次把《维摩诘经》和《药师经》连起来讲，因为它们是一个系统的。为什么说是一个系统的呢？我们一般都晓得，佛介绍给我们西方极乐世界的阿弥陀佛，这是为了方便，让我们末世智慧及福德不够的众生，能够修往生法门。而佛法真正的即生成就，这个成佛的大业与大道，却在《药师经》和《维摩诘经》所表征的东方世界两个佛国。一个是阿閦佛国，就是维摩居士化身成为在家佛所依附的东方妙喜不动世界。</p>
-<p>这个东方的阿閦佛国和另一个东方佛国药师琉璃光佛土相衔接。东方世界和西方阿弥陀佛的极乐世界相辉映，像是一个太阳系统的昼和夜。当太阳西斜下山的时候，到了西方极乐世界；太阳出来生生不已的时候，又到了东方阿閦佛国土和东方琉璃光佛土。这是佛法中的一大秘密，是真正的密宗。</p>
-<p>所以真正了解佛法以后就知道，一切显教的经典中明显告诉你的，你不懂，就成为大密宗。倒是一切密宗修持的方法，反而很是显教，因为它的密义，你若能深入参究，就明白了、就通了。显教告诉你真正的佛法奥秘，你再参究也不通，除非你福德成就、大智慧成就，才会通了。</p>
-<p>所以这次讲经的因缘，是把真正即生成就，佛法的大秘密告诉你，让你好好修持参学。不要以为打坐就是学佛。</p>
-<p>现在先翻到《维摩诘经》第十二品，“见阿閦佛品”，阿閦佛是东方妙喜如来不动国土的佛，也就是我们讲《药师经》时，所引到《法华经》当中的大通智胜佛的十六个佛子之一，连阿弥陀佛也是大通智胜佛的儿子。《维摩诘经》经文再下一品是“法供养品”，就提到药王如来，我们要了生死成佛超出三界，必须深切亲证到药王如来所开示的不死之法，不生也不灭。千古以来，都无人把佛法中的《药师经》、《维摩结经》、《法华经》当作秘密法门，只把它们作为显教的经文来诵读参学，自然不会明白修法的意义与关键所在，因此毫无成就。</p>
-<p>整本《维摩诘经》里面最重点的重点，是告诉我们：佛法就在这个世间，我们就在自己的身心上自了。如果求他方世界依赖别人，想了生死，想成佛道，是不可能的。因为外力仅是方便法门，非究竟法门。所以究竟法门必须要自度自了。</p>
-<p>再讲个插曲，例如四川的文殊院有幅非常好的对子：</p>
-<p class="poem">见了就作　作了便放下　了了有何不了<br/>
-慧生于觉　觉生于自在　生生本是无生</p>
-<p>像这些佛教文学，禅的精神，灵性智慧的渊源，都与《维摩诘经》有密切的关系。</p>
-<p>现在的《维摩诘经》中文版本，是在中国历史上动荡的南北朝时期，由西域请来的胡僧鸠摩罗什所翻译的。最初是前秦的苻坚发兵去请鸠摩罗什，但鸠摩罗什还没走到中国，苻坚的前秦就亡国了。后来就由姚兴在今天陕西地区所建的后秦国，出兵请到鸠摩罗什来中原。为了请来这一位学者，发兵几十万，灭了扣住鸠摩罗什的三个西域小国家，大概也只有中国南北朝这些野蛮的皇帝们才做得出来。</p>
-<p>这本经的文字之好，令人不由得要敬佩鸠摩罗什的才华。当然，他在中国所收的几位杰出大弟子，像僧肇、僧睿等，都是一流文学天才，自然也是本经文字优美的原因。因为有《维摩诘经》，中国此后两千年的文学、文化都为之丰富了。例如唐代文人的唐诗，几乎无不受《维摩诘经》的影响，从唐代就把《维摩诘经》编成戏剧上演，今日昆曲的《天女散花》就出自《维摩诘经》。这本宗教的经典已经深入民间的戏剧、歌曲、舞蹈，对中国文化、文学的影响之大，可以说无与伦比。但是近代一般的中国文化史、文学史和哲学史的学者，因为佛学涉猎不深，就看不通这一点。而近代佛教界人士，却不精历史，或文学根基不深，也同样摸不到这样的观点。</p>
-<h2>什么是真正的佛法</h2>
-<p>本经的经题是“维摩诘所说经”，后来也有题为“佛说维摩诘所说经”，那是后世因为尊崇释迦牟尼佛而加上的，实际上原经的翻译不用佛说二字，只是维摩诘居士所说的经，因为这本经的中心佛法是由维摩诘居士所说的。也有把经题翻译成“不可思议解脱经”，这是因为我们学佛的目的是为了要解脱三界，跳出六道轮回，还我们本来面目而成佛。众生原本是佛，自己迷失了原路，不知父母未生之前自己为何，找不到这个根源，因此就在三界六道中生死轮回。又因为受到物质世界环境影响，而有身心烦恼痛苦，生老病死等等。修持就是要解脱物质世界的束缚，解脱身心的烦恼，追溯回身心根源，自性清净。</p>
-<p>学佛目的在求解脱，如何解脱呢？维摩诘居士所说经告诉我们，真正的佛法就在我们这个世间求解脱。</p>
-<p>顺便提到，佛法所说不可思议，是说在修证上不可以用普通意识思想去猜测解释，不可以用凡夫的智慧知识来讨论研究。你只能用一个信的方法来修持。或者是信净土念佛法门，或者是信四念住、八正道、三十七菩提道品的法门。坚定专一地去求证，在求证的过程中，不可以用人世间的知识或习惯性的意识随便解释，所以说是不可思议，并不是说不能思议。如果是不能思议，那么这一部经就是因思议所生，岂不自我矛盾？究竟不可思议与思议的分别何在，这是佛法中的秘密，《维摩诘经》本身也给了你答案。</p>
-<p>现在进入《维摩诘经》的本文。</p>
-<h1>第十四品 嘱累</h1>
-<p class="jingwen">于是佛告弥勒菩萨言：弥勒！我今以是无量亿阿僧祇劫，所集阿耨多罗三藐三菩提法，付嘱于汝，如是辈经，于佛灭后末世之中，汝等当以神力，广宣流布于阎浮提，无令断绝，所以者何？未来世中，当有善男子善女人，及天、龙、鬼神、乾闼婆、罗刹等，发阿耨多罗三藐三菩提心，乐于大法，若使不闻如是等经，则失善利，如此辈人，闻是等经，必多信乐，发希有心，当以顶受，随诸众生所应得利，而为广说。弥勒当知，菩萨有二相。何谓为二？一者好于杂句文饰之事，二者不畏深义，如实能入。若好杂句文饰事者，当知是为新学菩萨，若于如是无染无著，甚深经典，无有恐畏，能入其中，闻已心净，受持读诵，如说修行，当知是为久修道行。弥勒，复有二法，名新学者，不能决定于甚深法。何等为二？一者所未闻深经，闻之惊怖生疑，不能随顺，毁谤不信，而作是言：我初不闻，从何所来？二者若有护持解说如是深经者，不肯亲近供养恭敬，或时于中，说其过恶。有此二法，当知是为新学菩萨，为自毁伤，不能于深法中，调伏其心。弥勒，复有二法，菩萨虽信解深法，犹自毁伤，而不能得无生法忍。何等为二？一者轻慢新学菩萨，而不教诲；二者虽信解深法，而取相分别，是为二法。</p>
-<p class="jingwen">弥勒菩萨闻说是已，白佛言：世尊，未曾有也！如佛所说，我当远离如斯之恶，奉持如来无数阿僧祇劫，所集阿耨多罗三藐三菩提法。若未来世，善男子善女人求大乘者，当令手得如是等经，与其念力，使受持读诵，为他广说。世尊，若后末世，有能受持读诵，为他说者，当知皆是弥勒神力之所建立。佛言：善哉，善哉！弥勒，如汝所说，佛助尔喜。</p>
-<p class="jingwen">于是一切菩萨，合掌白佛：我等亦于如来灭后，十方国土，广宣流布阿耨多罗三藐三菩提法，复当开导诸说法者，令得是经。</p>
-<p class="jingwen">尔时四天王白佛言：世尊，在在处处，城邑聚落，山林旷野，有是经卷，读诵解说者，我当率诸官属，为听法故，往诣其所，拥护其人，面百由旬，令无伺求，得其便者。</p>
-<p class="jingwen">是时佛告阿难：受持是经，广宣流布。阿难言：唯然！我已受持要者。世尊，当何名斯经？佛言：阿难！是经名为“维摩诘所说”，亦名“不可思议解脱法门”，如是受持。佛说是经已，长者维摩诘，文殊师利，舍利弗，阿难等，及诸天人阿修罗，一切大众，闻佛所说，皆大欢喜，信受奉行。</p>
-<p>现在是本经的最后一品“嘱累品”，很多经中都有这个品名。“嘱”是佛的吩咐；“累”是集中，就是把佛的吩咐累积起来，叫做“嘱累品”。本经这一品，佛吩咐弥勒菩萨，这位未来的佛。</p>
-<h2>佛对弥勒菩萨的交代</h2>
-<p><b>“于是佛告弥勒菩萨言：弥勒，我今以是无量亿阿僧祇劫所集阿耨多罗三藐三菩提法，付嘱于汝。如是辈经，于佛灭后末世之中，汝等当以神力，广宣流布于阎浮提，无令断绝。”</b>佛吩咐弥勒菩萨，把过去无量劫数修持累积来的大彻大悟法门，交待给你，像这一类的经，在我去世之后的末法时代，你应该以你神通的威力，在这个世界中弘扬，不要让佛法断绝。</p>
-<p><b>“所以者何？未来世中，当有善男子善女人，及天、龙、鬼、神、乾闼婆、罗刹等，发阿耨多罗三藐三菩提心，乐于大法。”</b>学佛的人要记住佛所教诲的一句话：“勿轻末学”，也有写成“勿轻未学”，就是不要轻视后辈或将来的人。孔子也说过：“后生可畏，安知来者之不如今？”观念和佛法是一样的。我尽管也骂时下年轻人，不过总是劝人也不必担心，这些年轻人将来会比我们过得好。</p>
-<p>佛在这里吩咐弥勒菩萨，将来末法时代的人，乃至牛鬼蛇神之非人类，也有发菩提心的。</p>
-<p><b>“若使不闻如是等经，则失善利。”</b>假使他们不能听闻这一类的经，就会失去应得的善利。</p>
-<p><b>“如此辈人，闻是等经，必多信乐，发希有心，当以顶受。随诸众生所应得利，而为广说。”</b>这些人和非人，听了这类的经，一定会乐于相信，会觉得是难得的经，会接受它是至高的道理。因此弥勒菩萨，你要为未来众生的利益来弘法。</p>
-<h2>两种菩萨</h2>
-<p><b>“弥勒当知，菩萨有二相。”</b>注意，一切众生都是因地上的菩萨，如果修持证果了，例如观音菩萨、文殊菩萨、地藏菩萨，就是果位上的菩萨。而菩萨分二种。</p>
-<p><b>“何谓为二？一者，好于杂句文饰之事。二者，不畏深义如实能入。”</b>第一种菩萨，喜欢把佛法当学问知识来研究；另一种，不畏惧高深的义理，能把身心投进去修持。在禅宗，第一种菩萨叫做理入，用思想学问证入的；第二种菩萨叫做行入，用修持做功夫证入的。达摩祖师说，在末法时代说理者多，行证者少。也就是说，好谈禅的人多，真做功夫的人少。</p>
-<p><b>“若好杂句文饰事者，当知是为新学菩萨。”</b>有些人只喜欢研究佛学，也很喜欢听经，但是要他来修行他就不干，或是环境不许可，这些是刚发心的菩萨。</p>
-<p><b>“若于如是无染无着甚深经典，无有恐畏，能入其中，闻已心净，受持读诵，如说修行，当知是为久修道行。”</b>有些人接触到这些大乘的经典，不会害怕，听闻经典后心能清净，能受持读诵，依教导修行。这种人都是前生有修行过的。</p>
-<p><b>“弥勒，复有二法，名新学者，不能决定于甚深法。”</b>初学菩萨又分两种。</p>
-<p><b>“何等为二？一者，所未闻深经，闻之惊怖生疑，不能随顺，毁谤不信，而作是言：我初不闻，从何所来。”</b>第一种人听了佛经的高深义理会害怕，或者不能相信，甚至毁谤佛法，会说我从没听过这种道理，我不信。</p>
-<p>事实上这种人的确有的，我当年在西康碰过一个人，他学问很好，地位很高，他常跟我说，我们什么都可以谈，只有佛法不能谈。有一天一起吃完饭，他对我说，你晓得吗？世界上真正吹牛祖师就是释迦牟尼。佛经上说，“于一毫端现宝王刹，坐微尘里转大法轮”，吹得多大啊，我说，你老兄说得不错。要影响一个人，不能摆你那个宗教面孔，骂他谤佛，要能布施、爱语、利行、同事才行。我便给他戴戴高帽子，他便对我这个学佛的就有好感了。逐渐地，他会背着我们去读佛经，这是他另外的朋友告诉我的。</p>
-<p>还有一个人，是英国老牌留学生，学问第一流，过去在国民政府当过部长的。他很气他的太太，因为他写的文章，常被太太说是狗屁不通。他打坐、读佛经，太太都反对，就问我怎么能影响他太太。我就告诉他，不用和太太争，但是把一些佛经故意翻开，搁在桌上太太看得到的地方。你不在，太太会去翻翻看的，一看就看进去了。他就依我的去做，最后真把太太引进门了，这就是教育的方便手段。你们千万不要摆一副宗教面孔，死板地传教，我看到汗毛都竖起来了。</p>
-<p><b>“二者，若有护持解说如是深经者，不肯亲近供养恭敬，或时于中，说其过恶。”</b>第二种初学菩萨，对于能护法说法的人，反而不愿意亲近供养，甚至会挑人家毛病，批评人家。</p>
-<p><b>“有此二法，当知是为新学菩萨，为自毁伤，不能于深法中，调伏其心。”</b>有这两种行为，就知道他是新学菩萨，虽然在学佛，也在造业，所以不能调伏其心，永远在生死轮回中。像是烧柴火，虽有亮光，但也在冒烟，要看将来哪一种力量战胜他。</p>
-<p><b>“弥勒，复有二法，菩萨虽信解深法，犹自毁伤，而不能得无生法忍。”</b>还有两种，有的菩萨虽然深信大乘佛法，但是自己倒行逆施，因此不能得无生法忍。</p>
-<p><b>“何等为二？一者，轻慢新学菩萨，而不教诲。二者，虽信解深法，而取相分别。是为二法。”</b>是哪两种？一种是轻视后辈。所以我常劝同学要发心帮助初学的同学，可是就有人会推三阻四的，你这样就已经造了业，会有果报的。第二种人，虽然了解佛法，但是分别心重，认为一定要怎么样才对，这也是造业。</p>
-<p>这里释迦牟尼佛对弥勒菩萨讲的，都是戒，是严重的菩萨戒啊！大家一定要注意。</p>
-<h2>弥勒菩萨的承诺</h2>
-<p><b>“弥勒菩萨闻说是已，白佛言：世尊，未曾有也。如佛所说，我当远离如斯之恶，奉持如来无数阿僧祇劫所集阿耨多罗三藐三菩提法。”</b>弥勒菩萨听了释迦牟尼佛的这一番教训，立刻就懂了，即刻表示会小心遵照佛的教导，会避免这些过错，会奉持佛在过去无量劫数修持累积来的大彻大悟法门。</p>
-<p><b>“若未来世，善男子善女人，求大乘者，当令手得如是等经，与其念力，使受持读诵，为他广说。”</b>未来如果有人愿意求大法的，我会让他遇到正法，我也会加被这样的人，使他能受持读诵，并且为他人解说。</p>
-<p><b>“世尊，若后末世，有能受持读诵，为他说者，当知皆是弥勒神力之所建立。”</b>假若在未来末法时代，有人对大乘经典能受持读诵，甚至能为他人解说的，那就是弥勒菩萨神通力量之助，也是他所发的心愿。</p>
-<p><b>“佛言：善哉！善哉！弥勒，如汝所说，佛助尔喜。”</b>佛听了就称赞弥勒菩萨，好啊！如你所说的愿力，诸佛都会帮助你，为你而欢喜。</p>
-<p><b>“于是一切菩萨合掌白佛：我等亦于如来灭后，十方国土，广宣流布阿耨多罗三藐三菩提法。复当开导诸说法者，令得是经。”</b>在场的所有菩萨都合掌对佛发愿，会在未来十方的国土中，弘扬正法。对于一切宣扬佛法的人，使他们能得到这部经。</p>
-<p><b>“尔时，四天王白佛言：世尊，在在处处，城邑聚落，山林、旷野，有是经卷，读诵解说者，我当率诸官属，为听法故，往诣其所，拥护其人。面百由旬，令无伺求，得其便者。”</b>接着，四大天王也向佛发愿，无论在何处，只要有人在念、在研读、在解说这一部经典，我们会带领天兵天将，前去保护，使他们在百由旬范围以内，不会受魔怨障碍。</p>
-<h2>阿难受命记录</h2>
-<p><b>“是时，佛告阿难：受持是经，广宣流布。”</b>最后佛吩咐阿难，要他好好整理记住这部经，将来广为流通。</p>
-<p><b>“阿难言：唯！我已受持要者。世尊，当何名斯经？”</b>阿难回答，是的，我已经记住了，这部经应该取什么名子呢？</p>
-<p><b>“佛言：阿难，是经名为维摩诘所说，亦名不可思议解脱法门，如是受持。”</b>所以，这本经的题目是佛所定的。</p>
-<p><b>“佛说是经已，长者维摩诘、文殊师利、舍利弗、阿难等，及诸天人、阿修罗一切大众，闻佛所说，皆大欢喜，信受奉行。”</b>研究所有佛经，都是这四个字“信受奉行”，这是四个阶段，真的信了吗？不是迷信，而是透彻了解道理的正信；信了以后接受，确实遵行。大家念经读到这四个字，都很开心，因为可以休息吃饭了。所有佛经都是由“如是我闻”开始，到“信受奉行”结尾，就是要以至诚接受，再变成行为。</p>
-<p>《维摩诘经》讲到今天，算是圆满了。</p>
+<h1>不是第一章(Not Chapter 1)</h1>
+<!--生成目录，因为ByHeader是2(Will not generate TOC here because 'ByHeader' is 2)-->
+
+<div class="makeepub-chapter" data-chapter-level="1" data-chapter-title="第一章"></div>
+<!--完全不依赖与标题节点的章节(A chapter does not depend on any 'header' tags)-->
+
+<h2>第一章第一节(Section 1 of Chapter 1)</h2>
+<!--一个普通的章节，生成目录，虽然'AtLevel'是2但不拆分文件，因为它与上级标题之间没有任何正文。(A normal chapter, will generate TOC but will not split file even 'AtLevel' is 2, because there's no content between it and its parent)-->
+<p>第一章第一节(content of section 1 of chapter 1)</p>
+<h3>测试三级标题(Test Level 3 chapter)</h3>
+<!--一个普通的章节，生成目录，因为'AtLevel'是2所以不拆分文件(A normal chapter, will generate TOC but will not split file because 'AtLevel' is 2)-->
+<h4>测试四级标题(Test Level 4 chapter)</h4>
+<!--一个普通的章节，既不生成目录也不拆分文件，因为'AtLevel'是2，‘toc’是3(A normal chapter, will neither generate TOC or split file because 'AtLevel' is 2 and 'toc' is 3)-->
+
+<h1 class="makeepub-chapter">第二章(Chapter 2)</h1>
+<!--会拆分和生成目录，因为class 'makeepub-chapter'将它转换为一个章节节点(Will split and generate TOC here because of class 'makeepub-chapter')-->
+
+<p>第二章正文的第一部分(part 1 of the chapter 2 content)</p>
+<div class="makeepub-chapter" data-chapter-level="0"></div>
+<!--'data-chapter-level'为0将在此强制拆分文件，但不会生成目录(Force split but not generate TOC because 'data-chapter-level' is 0)-->
+<p>第二章正文的第二部分(part 2 of the chapter 2 content)</p>
+
+<img class="duokan-fullscreen makeepub-chapter" src="fullscreen.jpg" alt="fullscreen"/>
+<!--全屏插图，同时根据后续<h1>生成目录(full screen image, and will generate TOC based on the next <h1> tag)-->
+<h1>第三章(Chapter 3)</h1>
+<h2 class="makeepub-not-chapter">不是章节(not a chapter)</h2>
+<!--不是章节，因为class 'makeepub-not-chapter'(Not a chapter because of class 'makeepub-not-chapter')-->
+<h2 data-chapter-title="(Section 1 one Chapter 3)第三章第一节">第三章第一节(Section 1 one Chapter 3)</h2>
+<!--章节标题是'data-chapter-title'属性(chapter title will be the value of attribute 'data-chapter-title')-->
+
+<div class="makeepub-chapter"></div>
+<!--会生成目录，目录级别和标题有后续标题节点决定，这里是<h2>(Will generate TOC here, chapter level and title are determined by the next 'header' tag, <h2> here)-->
+<p>这些文字会出现在章节标题前(text before chapter title)</p>
+<h2>第三章第二节(Section 2 one Chapter 3)</h2>
+<!--不会生成目录，因为已经被前面的<div>使用了(Will not generate TOC, becuase <h2> is already used by the <div> tag)-->
 </body>
 </html>
