update example to make it smaller

--- a/example/book/book.html
+++ b/example/book/book.html
@@ -28,7 +28,7 @@
 <!--'data-chapter-level'为0将在此强制拆分文件，但不会生成目录(Force split but not generate TOC because 'data-chapter-level' is 0)-->
 <p>第二章正文的第二部分(part 2 of the chapter 2 content)</p>
 
-<img class="duokan-fullscreen makeepub-chapter" src="fullscreen.jpg" alt="fullscreen"/>
+<img class="duokan-fullscreen makeepub-chapter" src="fullscreen.png" alt="fullscreen"/>
 <!--全屏插图，同时根据后续<h1>生成目录(full screen image, and will generate TOC based on the next <h1> tag)-->
 <h1>第三章(Chapter 3)</h1>
 <h2 class="makeepub-not-chapter">不是章节(not a chapter)</h2>
